...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_refresh_albums"
        >
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerConstraintLayout"
                android:layout_width="match_parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/album_item" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/agregarAlbumButt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/button_styled"
                    android:radius="10dp"
                    android:stateListAnimator="@null"
...
